refactor:자료구조를 List로 변경하라